# takusu

./: -  .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  baseline-sa-1core.tsv  flake.nix  main.typ  opencode.json  rust-toolchain.toml
.serena/: project.yml
baseline-cp/: quality_small.json  realworld_tasks.json  realworld_tasks_30d.json  realworld_tasks_7d.json  stress_30d.json  stress_30d_dense.json  stress_30d_mixed.json
crates/google-cal/: Cargo.toml
crates/google-cal/src/: lib.rs
crates/takusu-agent/: Cargo.toml  build.rs
crates/takusu-agent/skills/: search-qualifiers.md  weekly-review.md  write-rrule.md
crates/takusu-agent/src/: audio.rs  audio_config.rs  bundled_skills.rs  compact.rs  lib.rs  llm.rs  permissions.rs  runner.rs  tool.rs  transport.rs  user_input.rs
crates/takusu-agent/src/fixtures/: error_response.json  text_response.json  tool_calls_response.json
crates/takusu-agent/src/tools/: audio.rs  day_details.rs  memory.rs  mod.rs  progress.rs  rrule.rs  skills.rs  takusu.rs  user_input.rs
crates/takusu-android/: Cargo.toml
crates/takusu-android/src/: audio.rs  lib.rs  log_buffer.rs  model.rs
crates/takusu-audio/: Cargo.toml
crates/takusu-audio-cli/: Cargo.toml
crates/takusu-audio-cli/src/: main.rs
crates/takusu-audio/src/: cartesia.rs  funasr.rs  hush.rs  kokoro.rs  lib.rs  models.rs  moonshine.rs  play.rs  record.rs  sherpa.rs  stt.rs  transcription.rs  tts.rs
crates/takusu-cli/: Cargo.toml
crates/takusu-cli/src/: agent.rs  config.rs  display_rich.rs  display_simple.rs  editor.rs  main.rs  mcp.rs  server.rs  task_ref.rs
crates/takusu-client/: Cargo.toml
crates/takusu-client/src/: lib.rs
crates/takusu-client/tests/: roundtrip.rs
crates/takusu-core/: Cargo.toml
crates/takusu-core/benches/: plan.rs  realworld.rs
crates/takusu-core/benches/fixtures/: quality_small.json  realworld_tasks.json  realworld_tasks_30d.json  realworld_tasks_7d.json  stress_30d.json  stress_30d_dense.json  stress_30d_mixed.json  stress_90d.json
crates/takusu-core/examples/: compare_solvers.rs  daily.rs  profile.rs  quality.rs  score_check.rs
crates/takusu-core/examples/common/: mod.rs
crates/takusu-core/src/: anneal.rs  decoder.rs  evaluate.rs  lib.rs  placement.rs  solver.rs
crates/takusu-ical/: Cargo.toml
crates/takusu-ical/benches/: parse.rs
crates/takusu-ical/benches/fixtures/: calendar.ics
crates/takusu-ical/src/: lib.rs
crates/takusu-local/: Cargo.toml
crates/takusu-local-lib/: Cargo.toml
crates/takusu-local-lib/migrations/: 003_settings.sql  004_indexes.sql  010_habit_pauses.sql  012_window_mode.sql  013_habit_task_display_id.sql  015_skills.sql  016_memory.sql  017_solver.sql  018_progress.sql  019_jwt.sql  020_task_actual_minutes_view.sql  021_solver_default_sa.sql  023_timestamp_format.sql  024_zero_quantity_to_null.sql  025_task_normalized_title.sql
crates/takusu-local-lib/src/: app.rs  auth.rs  config.rs  error.rs  graph.rs  lib.rs  sentry.rs  storage_sqlite.rs  storage_workers.rs  token_cache.rs
crates/takusu-local/migrations/: 005_task_display_id.sql  006_user_edited.sql
crates/takusu-local/src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  router.rs  state.rs  storage_sqlite.rs  token_cache.rs
crates/takusu-local/src/handlers/: habit.rs  memory.rs  mod.rs  schedule.rs  settings.rs  skills.rs  sync.rs  task.rs  token.rs
crates/takusu-local/tests/: gcal_mappings.rs  integration.rs  phase4.rs  workers_e2e.rs  workers_update_credentials.rs
crates/takusu-serve/: Cargo.toml  SPEC.md
crates/takusu-serve/migrations/: 001_init.sql  002_google_cal.sql
crates/takusu-serve/src/: app.rs  auth.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  model.rs
crates/takusu-serve/src/handler/: habit.rs  mod.rs  schedule.rs  settings.rs  sync.rs  task.rs  token.rs
crates/takusu-serve/tests/: integration.rs
crates/takusu-storage/: Cargo.toml
crates/takusu-storage/src/: error.rs  lib.rs  model.rs  storage.rs
crates/takusu-tui/: Cargo.toml
crates/takusu-tui/src/: app.rs  event.rs  lib.rs  style.rs  ui.rs
crates/takusu-tui/src/tabs/: habits.rs  mod.rs  schedule.rs  settings.rs  tasks.rs
crates/takusu-tui/src/widgets/: detail.rs  list.rs
crates/takusu-util/: Cargo.toml
crates/takusu-util/src/: bool_compat.rs  jwt.rs  lib.rs  memory.rs  option_bool_compat.rs  search.rs
crates/takusu-worker/: .dev.vars  .gitignore  Cargo.toml  wrangler.toml
crates/takusu-worker/.devin/: config.json
crates/takusu-worker/migrations/: 007_task_display_id_seq.sql  008_fixed.sql  009_habit_display_id.sql  010_habit_pauses.sql  011_habit_steps.sql  013_habit_task_display_id.sql  014_workload.sql  016_rename_habit_pauses_to_scheduled_spans.sql  017_memory.sql  018_solver.sql  020_jwt.sql  023_split_from_task_index.sql  026_task_normalized_title.sql
crates/takusu-worker/src/: auth.rs  error.rs  lib.rs  memory.rs  models.rs  router.rs  validate.rs
crates/takusu-worker/src/handlers/: auth.rs  d1.rs  habits.rs  health.rs  memory.rs  mod.rs  progress.rs  schedule.rs  settings.rs  skills.rs  sync.rs  tasks.rs  tokens.rs
crates/takusu-worker/tests/: auth.rs
crates/takusu-worker/tests/common/: mod.rs
design/: agent-approval-ui-mock.html  agent-thinking-ui-mock.html  agent-tool-ui-mock.html  asr-correction-ui-mock.html  core-problems.md  fail-optimization.md  optimization-baselines.md  palette-preview.html  plan-agent.md  plan-composite-deps.md  plan-habit-improvement.md  plan-habit-scheduled-spans.md  plan-memory.md  plan-mobile.md  planner-optimization-strategy.md  priority-decoder-production-roadmap.md  task-search-ui-mock.html
doc/: core-problems.md  fail-optimization.md  mobile-ui.md  proposal.typ  resident-agent.md
docs/: book.toml
funasr_server/: pyproject.toml
funasr_server/src/funasr_server/: __init__.py  __main__.py  config.py  server.py
funasr_server/tests/: test_model_lock.py
mobile/: .editorconfig  .env.local.example  .gitignore  .oxfmtrc.json  .oxlintrc.json  (+7 more)
moonshine_server/: pyproject.toml
moonshine_server/src/moonshine_server/: __init__.py  __main__.py  config.py  server.py
(+321 files in other folders)
