[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/satler-git/takusu"

[workspace.dependencies]
thiserror = "2.0"
jiff = "0.2.21"
rand = "0.8"
rustc-hash = "2.1"
rayon = "1.10"
criterion = "0.5"

tokio = { version = "1.52.0", features = ["full"] }
axum = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7"] }
sha2 = "0.10"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
takusu-core = { path = "crates/takusu-core" }
takusu-ical = { path = "crates/takusu-ical" }
google-cal = { path = "crates/google-cal" }
