[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.20260713.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/satler-git/takusu"

[workspace.dependencies]
thiserror = "2.0"
jiff = "0.2.21"
rand = "0.10"
rustc-hash = "2.1"
rayon = "1.10"
criterion = "0.8"

tokio = { version = "1.52.0", features = ["full"] }
axum = "0.8"
sqlx = { version = "0.9", features = ["runtime-tokio", "sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7"] }
sha2 = "0.11"
tower-http = { version = "0.7", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.15"
async-trait = "0.1"
reqwest = { version = "0.13", features = [
  "json",
  "form",
  "rustls",
], default-features = false }
takusu-core = { path = "crates/takusu-core" }
takusu-ical = { path = "crates/takusu-ical" }
takusu-client = { path = "crates/takusu-client" }
takusu-util = { path = "crates/takusu-util" }
takusu-audio = { path = "crates/takusu-audio" }
takusu-storage = { path = "crates/takusu-storage" }
takusu-habit = { path = "crates/takusu-habit" }
takusu-local-lib = { path = "crates/takusu-local-lib", default-features = false }
takusu-local = { path = "crates/takusu-local", default-features = false }
google-cal = { path = "crates/google-cal" }

tokio-tungstenite = "0.29"
futures-util = "0.3"
petgraph = { version = "0.8", default-features = false }
toml = "0.8"
