[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.20260723.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/satler-git/takusu"

[workspace.dependencies]
thiserror = "2.0"
jiff = "0.2.21"
rand = "0.10"
rustc-hash = "2.1"
rayon = "1.10"
criterion = { package = "codspeed-criterion-compat", version = "5.0.1" }

tokio = { version = "1.52.0", features = ["full"] }
axum = "0.8"
sqlx = { version = "0.9", features = ["runtime-tokio", "sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7"] }
sha2 = "0.11"
tower-http = { version = "0.7", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sentry = { version = "0.48.4", default-features = false, features = ["backtrace", "contexts", "debug-images", "panic", "rustls", "tracing", "ureq"] }
config = "0.15"
async-trait = "0.1"
reqwest = { version = "0.13", features = [
  "json",
  "form",
  "rustls",
], default-features = false }
takusu-core = { path = "crates/takusu-core" }
takusu-ical = { path = "crates/takusu-ical" }
takusu-client = { path = "crates/takusu-client" }
takusu-util = { path = "crates/takusu-util" }
takusu-audio = { path = "crates/takusu-audio" }
takusu-agent = { path = "crates/takusu-agent", default-features = false }
takusu-storage = { path = "crates/takusu-storage" }
takusu-habit = { path = "crates/takusu-habit" }
takusu-local-lib = { path = "crates/takusu-local-lib", default-features = false }
takusu-local = { path = "crates/takusu-local", default-features = false }
google-cal = { path = "crates/google-cal" }

futures-util = "0.3"
petgraph = { version = "0.8", default-features = false }
web-time = "1.1"
toml = "0.8"

[profile.dev.package."tikv-jemalloc-sys"]
# Build the C jemalloc sources with optimizations even in dev/test. This avoids
# `_FORTIFY_SOURCE` warnings-as-errors in Nix dev shells with newer glibc, and
# does not meaningfully slow down incremental Rust builds.
opt-level = 3

[profile.test.package."tikv-jemalloc-sys"]
opt-level = 3

[profile.release]
# Compile the entire crate as one unit.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
lto = "thin"
# Maximum speed optimizations (default release opt-level).
opt-level = 3
