[project]
name = "funasr-server"
version = "0.1.0"
description = "FunASR WebSocket server for takusu voice assistant"
requires-python = ">=3.10"
dependencies = [
    "funasr>=1.2",
    "torch>=2.1",
    "torchaudio>=2.1",
    "websockets>=14.0",
    "numpy>=1.24",
    "modelscope>=1.18",
    "huggingface_hub",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cpu"]
find-links = ["https://download.pytorch.org/whl/torch_stable.html"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/funasr_server"]