[package]
name = "takusu-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "takusu-agent"
path = "src/bin/agent.rs"

[dependencies]
async-trait = { workspace = true }
clap = { version = "4", features = ["derive"] }
config = { workspace = true }
jiff = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
takusu-client = { workspace = true }
takusu-util = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
