[package]
name = "takusu-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "takusu-agent"
path = "src/bin/agent.rs"
required-features = ["audio-device"]

[features]
default = ["audio-device"]
audio-device = ["takusu-audio/sherpa", "takusu-audio/record"]

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
clap = { version = "4", features = ["derive"] }
config = { workspace = true }
futures-util = { workspace = true }
jiff = { workspace = true }
jpholiday = "0.2.0"
rand = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio-stream = "0.1"
toml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
takusu-audio = { path = "../takusu-audio", default-features = false }
takusu-client = { workspace = true }
takusu-core = { workspace = true }
takusu-habit = { workspace = true }
takusu-util = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
