[package]
name = "takusu-android"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
required-features = ["bindgen"]

[dependencies]
takusu-local = { workspace = true, default-features = false }
takusu-local-lib = { workspace = true }
takusu-storage = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
thiserror = { workspace = true }
uniffi = "0.31.2"

[features]
bindgen = ["uniffi/cli"]
