[package]
name = "takusu-android"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
required-features = ["bindgen"]

[dependencies]
takusu-local = { workspace = true, default-features = false }
takusu-agent = { path = "../takusu-agent", default-features = false }
takusu-audio = { path = "../takusu-audio", default-features = false, features = ["hush", "sherpa"] }
takusu-client = { workspace = true }
takusu-local-lib = { workspace = true }
takusu-storage = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uniffi = "0.31.2"
reqwest = { workspace = true }
serde_json = { workspace = true }
webpki-root-certs = "1"

[features]
bindgen = ["uniffi/cli"]
