[package]
name = "takusu-audio-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "takusu-audio"
path = "src/main.rs"

[features]
default = []
hush = ["takusu-audio/hush"]
sherpa = ["takusu-audio/sherpa"]
kokoro = ["takusu-audio/kokoro"]

[dependencies]
tokio = { workspace = true }
takusu-audio = { workspace = true }

clap = { version = "4", features = ["derive"] }
hound = "3.5"
