[package]
name = "takusu-audio"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["funasr"]
funasr = ["tokio-tungstenite", "futures-util"]

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }

cpal = "0.17.3"

tokio-tungstenite = { version = "0.26", optional = true }
futures-util = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }