[package]
name = "takusu-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "takusu"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
jiff = { workspace = true }
takusu-local-lib = { workspace = true }
takusu-util = { workspace = true }
takusu-storage = { workspace = true }
toml = "0.8"

comfy-table = "7"
clap_complete = "4"
atty = "0.2"