[package]
name = "takusu-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "takusu"
path = "src/main.rs"

[features]
default = ["mcp"]
mcp = ["dep:rmcp"]

[dependencies]
async-trait = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
jiff = { workspace = true }
takusu-local-lib = { workspace = true, features = ["sqlite"] }
takusu-local = { workspace = true }
takusu-agent = { workspace = true }
takusu-client = { workspace = true }
takusu-util = { workspace = true }
takusu-storage = { workspace = true }
takusu-habit = { workspace = true }
takusu-tui = { workspace = true }
uuid = { workspace = true }
toml = "0.8"
toml_edit = "0.22"
rmcp = { version = "1.8", features = ["server", "transport-io"], optional = true }

comfy-table = "7"
clap_complete = "4"
atty = "0.2"
axum = { workspace = true }
rpassword = "7.5.4"
