[package]
name = "takusu-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
reqwest = { workspace = true, features = ["query"] }
serde = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
webpki-root-certs = "1"
