[package]
name = "takusu-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
jiff.workspace = true
rand.workspace = true
rustc-hash.workspace = true
rayon.workspace = true
mimalloc = { version = "=0.1.50", optional = true }
tikv-jemallocator = { version = "=0.6.0", optional = true }

[dev-dependencies]
criterion.workspace = true
serde.workspace = true
serde_json.workspace = true

[[bench]]
name = "plan"
harness = false

[[bench]]
name = "realworld"
harness = false

[features]
default = ["jemalloc"]
mimalloc = ["dep:mimalloc"]
jemalloc = ["dep:tikv-jemallocator"]
