[package]
name = "takusu-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
jiff.workspace = true
rand.workspace = true
rustc-hash.workspace = true
rayon.workspace = true
tikv-jemallocator = { version = "=0.6.0", optional = true }

[dev-dependencies]
criterion.workspace = true
serde.workspace = true
serde_json.workspace = true

[[bench]]
name = "plan"
harness = false

[[bench]]
name = "realworld"
harness = false

[[example]]
name = "quality"

[[example]]
name = "compare_solvers"

[features]
default = ["jemalloc"]
jemalloc = ["dep:tikv-jemallocator"]
