[package]
name = "takusu-ical"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
jiff.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "parse"
harness = false