[package]
name = "takusu-local-lib"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["sqlite"]
sqlite = ["dep:sqlx"]

[dependencies]
takusu-core.workspace = true
takusu-ical.workspace = true
takusu-habit.workspace = true
takusu-storage.workspace = true
takusu-util.workspace = true
google-cal.workspace = true
tokio.workspace = true
sqlx = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
sha2.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sentry.workspace = true
thiserror.workspace = true
jiff.workspace = true
web-time.workspace = true
async-trait.workspace = true
reqwest = { workspace = true }
petgraph.workspace = true
