[package]
name = "takusu-local"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "takusu-local"
path = "src/main.rs"

[dependencies]
takusu-core.workspace = true
takusu-ical.workspace = true
takusu-storage.workspace = true
google-cal.workspace = true
axum.workspace = true
tokio.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
sha2.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
jiff.workspace = true
async-trait.workspace = true
reqwest = { workspace = true }
config.workspace = true

[dev-dependencies]
tower = "0.5"
http-body-util = "0.1"
uuid.workspace = true
sha2.workspace = true
http = "1"


