[package]
name = "takusu-serve"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
takusu-core.workspace = true
takusu-ical.workspace = true
google-cal.workspace = true
axum.workspace = true
tokio.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
sha2.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
jiff.workspace = true
async-trait.workspace = true

[dev-dependencies]
tower = "0.5"
http-body-util = "0.1"