[package]
name = "takusu-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sqlx = { version = "0.9", default-features = false, features = ["derive", "macros"] }
takusu-util.workspace = true

