[package]
name = "takusu-util"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
uuid = { workspace = true, features = ["js"] }
jiff.workspace = true
web-time.workspace = true
serde.workspace = true
serde_json.workspace = true
unicode-normalization = "0.1.25"
sha2.workspace = true
hmac = "0.13"
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
getrandom = { version = "0.4", features = ["wasm_js"] }
